# activity-detection---inference-service

./: .gitignore  Makefile  README.md  dbscan.py  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
src/classes/: classify_typing_proposals.py  data_loader.py  dyadic_cnn_3d.py  extract_region_proposals.py  generate_region_proposals.py
src/stages/: classify_proposals.py  extract_proposals.py  generate_proposals.py
src/utility/: coordinates.py  directory.py  memory_monitor.py
