[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dyadiccnn3d"
version = "0.0.1"
description = "Code is refactored from VJs original dyadiccnn3d code for his typing dataset"
authors = [
  { name = "miguel" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["dyadiccnn3d"]
force_sort_within_sections = true
